--- a/Top 10 MBA Job Opportunities to Explore.html
+++ b/Top 10 MBA Job Opportunities to Explore.html
@@ -34,6 +34,9 @@
             text-align: justify;
             
         }
+        .page-header::before {
+           background: none;
+        }
     </style>
 </head>
 
@@ -117,7 +120,7 @@
                 <div class="header-bar2 ml-auto d-lg-none">
                     <i class="fas fa-ellipsis-h"></i>
                 </div>
-                <div class="header-bar d-lg-none">
+                <div class="header-bar mr-4 d-lg-none">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -138,7 +141,7 @@
     <!-- ==========Header Section Ends Here========== -->
     
     <!-- ==========Page Header Section Starts Here========== -->
-    <section class="page-header bg_img" data-background="assets/images/about/page-header.jpg">
+    <section class="page-header bg_img" data-background="assets/images/banner/banner-img.png">
         <div class="container">
             <div class="page-header-content">
                 <h2 class="title">Blog Post</h2>
