--- a/aboutUs.html
+++ b/aboutUs.html
@@ -265,7 +265,7 @@
         </div>
    </section>
    <section>
-    <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/about/video_info.png" style="margin-bottom: 100px; height: 400px;">
+    <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/about/about-info.jpg" style="margin-bottom: 100px; height: 400px;">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">  
