added responsive file

--- a/Distance MBA.html
+++ b/Distance MBA.html
@@ -306,8 +306,7 @@
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i><span><strong><a
                                                             style=" text-decoration: underline;" href="">Information
-                                                            Technology and Systems
-                                                            Management</a></strong></span></span></p>
+                                                            Technology and Systems</a></strong></span></span></p>
                                         <p><span style="color: #ffffff; margin-top: 18px;"><a
                                                     style="background-color: #fb3b3a; color: #ffffff; border: 0px solid #ffffff; border-radius: 5px; padding: 12px; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);"
                                                     href="">Get Free Counselling </a></span></p>
@@ -345,36 +344,30 @@
                                             Management.</p>
                                         <p style="margin-top: 10px; font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a href="">Distance Weekend and Weekday Lectures to
-                                                            choose</a></strong></span></span></p>
+                                                <span><strong><a href="">Distance Weekend and Weekday</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a href="">Lectures recorded for all
                                                             Sessions</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i></i>
-                                                <span><strong><a href="">Personal Contact Programs for clearing
-                                                            doubts</a></strong></span></span></p>
+                                                <span><strong><a href="">Personal Contact Programs</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a href="">Mobile App in addition to the NMIMS Student
-                                                            Portal</a></strong></span></span></p>
+                                                <span><strong><a href="">Mobile App in addition to the NMIMS</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a href="">Guest Lectures from Industry
                                                             Experts</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a href="">Exams have MCQs as well as Descriptive
-                                                            questions</a></strong></span></span></p>
+                                                <span><strong><a href="">Exams have MCQs as well as</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a href="">Support in the form of Email, Call, and
-                                                            WhatsApp</a></strong></span></span></p>
+                                                <span><strong><a href="">Support in the form of Email, Call</a></strong></span></span></p>
                                         <p style="margin-top: 10px;  font-size: 18px;"><span style="color: #fb3b3a"><i
                                                     aria-hidden="true" class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a href="">EMI and Loan Facility for completing the
-                                                            programme</a></strong></span></span></p>
+                                                <span><strong><a href="">EMI and Loan Facility for completing</a></strong></span></span></p>
                                         <p><span style="color: #ffffff; margin-top: 18px;"><a
                                                     style="background-color: #fb3b3a; color: #ffffff; border: 0px solid #ffffff; border-radius: 5px; padding: 12px; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);"
                                                     href="">Get Free Counselling </a></span></p>
