--- a/batchlor courses.html
+++ b/batchlor courses.html
@@ -350,8 +350,7 @@
                                             <p style="font-size: 18px;"><span style="color: #fb3b3a"><i
                                                         aria-hidden="true" class="fas fa-chevron-circle-right"></i>
                                                     <span><strong><a style=" text-decoration: underline;" href="">They
-                                                                offer a discount to students whose
-                                                                family have defence </a></strong></span></span></p>
+                                                                offer a discount to students </a></strong></span></span></p>
                                             <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i
                                                         aria-hidden="true" class="fas fa-chevron-circle-right"></i>
                                                     <span><strong><a style=" text-decoration: underline;" href="">EMI
