--- a/certificate-courses.html
+++ b/certificate-courses.html
@@ -257,7 +257,7 @@
                                                     class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a style=" text-decoration: underline;"
                                                             href="">Certificate Program in Corporate
-                                                            Communications</a></strong></span></span></p>
+                                                          </a></strong></span></span></p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a style=" text-decoration: underline;" href="">Diploma in
@@ -268,13 +268,13 @@
                                                             Marketing Management</a></strong></span></span></p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a style=" text-decoration: underline;" href="">Diploma in
-                                                            International Trade Management</a></strong></span></span>
+                                                <span><strong><a style=" text-decoration: underline;" href="">Diploma
+                                                            International Trade</a></strong></span></span>
                                         </p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a style=" text-decoration: underline;" href="">Diploma in
-                                                            Human Resource Management</a></strong></span></span></p>
+                                                <span><strong><a style=" text-decoration: underline;" href="">Diploma
+                                                            Human Resource</a></strong></span></span></p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a style=" text-decoration: underline;" href="">Diploma in
