--- a/distance-diploma.html
+++ b/distance-diploma.html
@@ -269,12 +269,11 @@
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a style=" text-decoration: underline;" href="">Diploma in
-                                                            International Trade Management</a></strong></span></span>
+                                                            International Management</a></strong></span></span>
                                         </p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
-                                                <span><strong><a style=" text-decoration: underline;" href="">Diploma in
-                                                            Human Resource Management</a></strong></span></span></p>
+                                                <span><strong><a style=" text-decoration: underline;" href="">Human Resource Management</a></strong></span></span></p>
                                         <p style=" font-size: 18px;"><span style="color: #fb3b3a"><i aria-hidden="true"
                                                     class="fas fa-chevron-circle-right"></i>
                                                 <span><strong><a style=" text-decoration: underline;" href="">Diploma in
