--- a/aboutUs.html
+++ b/aboutUs.html
@@ -119,14 +119,18 @@
 
     <!-- ==========Page Header Section Starts Here========== -->
     <section>
-        <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/about/about-us.png">
-            <div class="container">
-
+        <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/banner/banner-img.png">
+            <div class="page-header-content">
+                <h2 class="title">About</h2>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="index.html">home</a>
+                    </li>
+                    <li>
+                        About
+                    </li>
+                </ul>
             </div>
-            <!-- <div class="page-header-content">
-                <h2 class="title">About Us</h2>
-                <h6>Join our community of learners and start your journey towards success.</h6>
-            </div> -->
         </div>
     </section>
     <!-- ==========Page Header Section Ends Here========== -->
