--- a/certificate-courses.html
+++ b/certificate-courses.html
@@ -191,14 +191,14 @@
 
                                     </div>
                                     <div class="col-lg-6" style="margin-top: 15px;">
-                                        <div class="">
+                                        <div class="" style="width: 100%;">
 
-                                            <form class="form" style="margin-left: 9%;">
+                                            <form class="forms" style=" width: 100%;">
                                                 <h6 class="">Enquire Now</h6>
                                                 <p>Don’t hesitate to contact us for more information</p>
-                                                <input class="input" placeholder="Name" type="text">
-                                                <input class="input" placeholder="Email" type="text">
-                                                <input class="input" placeholder="Phone" type="text">
+                                                <input class="input" placeholder="Name" type="text"><br><br>
+                                                <input class="input" placeholder="Email" type="text"><br><br>
+                                                <input class="input" placeholder="Phone" type="text"><br><br>
                                                 <select class="input">
                                                     <option placeholder="Distance MBA Programs">Distance MBA Programs
                                                     </option>
@@ -206,8 +206,8 @@
                                                     <option placeholder="">Diploma Programs</option>
                                                     <option placeholder="">Bachelor Programs</option>
 
-                                                </select>
-                                                <input type="text" name="text" class="input" placeholder="City">
+                                                </select><br><br>
+                                                <input type="text" name="text" class="input" placeholder="City"><br><br>
 
                                                 <button class="submit">Submit</button>
                                             </form>
@@ -225,7 +225,7 @@
             </div>
 
             <!-- ==========Feature Section Starts Here========== -->
-            <div class="feature-section padding-top padding-bottom-2" style="margin-top: 100px;">
+            <div class="feature-section padding-top padding-bottom-2" style="margin-top: 50px;">
                 <div class="container">
                     <h6 class="pb-3"></h6>
                     <div class="row">
