added active header

--- a/Top 10 MBA Job Opportunities to Explore.html
+++ b/Top 10 MBA Job Opportunities to Explore.html
@@ -91,7 +91,7 @@
                     </li>
 
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a>Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -108,7 +108,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html" class="active">Blog</a>
                     </li>
                     <li>
                         <a href="aboutUs.html">About Us</a>
