--- a/batchlor courses.html
+++ b/batchlor courses.html
@@ -70,7 +70,7 @@
                     </li>
 
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a class="active">Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
