--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 <ul class="menu">
                     <li> <a href="index.html"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a></li>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
 
                     </li>
 
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a>Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
