--- a/Distance MBA.html
+++ b/Distance MBA.html
@@ -79,7 +79,7 @@
                     </li>
 
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a class="active">Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
