--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,7 +69,7 @@
                     </li>
 
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a>Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -89,7 +89,7 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="aboutUs.html">About Us</a>
+                        <a href="aboutUs.html" class="active">About Us</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
