--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 
                     </li>
                     <li>
-                        <a href="#0">Our Courses</a>
+                        <a>Our Courses</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -99,7 +99,7 @@
                         <a href="aboutUs.html">About Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html" class="active">Contact</a>
                     </li>
                 </ul>
                 <div class="header-bar2 ml-auto d-lg-none">
