--- a/batchlor courses.html
+++ b/batchlor courses.html
@@ -70,7 +70,7 @@
                     </li>
 
                     <li>
-                        <a class="active">Our Courses</a>
+                        <a class="active">Top University</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -85,6 +85,9 @@
                                 <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="compare.html">Compare</a>
                     </li>
                     <li>
                         <a href="blog.html">Blog</a>
