--- a/certificate-courses.html
+++ b/certificate-courses.html
@@ -69,7 +69,7 @@
                     </li>
 
                     <li>
-                        <a  class="active">Our Courses</a>
+                        <a  class="active">Top university</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -84,6 +84,9 @@
                                 <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="compare.html">Compare</a>
                     </li>
                     <li>
                         <a href="blog.html">Blog</a>
