--- a/distance-diploma.html
+++ b/distance-diploma.html
@@ -32,7 +32,7 @@
     <div class="overlay"></div>
     <!-- ==========Header Section Starts Here========== -->
     <header>
-        <div class="header-top">
+        <!-- <div class="header-top">
             <div class="container">
                 <div class="header-top-wrapper">
                     <span><i aria-hidden="true" class="far fa-clock"></i> Working Hours : 10 AM to 7 PM</span>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="header-middle">
             <div class="header-area">
 
@@ -70,7 +70,7 @@
                     </li>
 
                     <li>
-                        <a  class="active">Our Courses</a>
+                        <a  class="active">Top University</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -85,6 +85,9 @@
                                 <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="compare.html">Compare</a>
                     </li>
                     <li>
                         <a href="blog.html">Blog</a>
