--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>
 
                     <li>
-                        <a>Our Courses</a>
+                        <a>Top University</a>
                         <ul class="submenu">
                             <li>
                                 <a href="Distance MBA.html">Distance MBA</a>
@@ -86,6 +86,9 @@
                                 <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="compare.html">Compare</a>
                     </li>
                     <li>
                         <a href="blog.html">Blog</a>
